--- a/.github/workflows/scrape.yaml
+++ b/.github/workflows/scrape.yaml
@@ -10,7 +10,13 @@ jobs:
     steps:
       - name: Check out repository code
         uses: actions/checkout@v3
-      - run: ./.github/workflows/scrape-and-push.sh
+      - name: install stuff
+        run: apt-get update
+        run: apt-get install -y --no-install-recommends r-base python3 python3-pip r-cran-tidyverse
+        run: pip3 install -r requirements.txt
+      - name: run scripts
+        run: python3 test.py #updateAll.py
+        #run: Rscript clean.R
       - name: Create date file
         run: date +%s > last-run.txt
       - name: Commit report
