--- a/.github/workflows/scrape.yaml
+++ b/.github/workflows/scrape.yaml
@@ -24,6 +24,6 @@ jobs:
         run: |
           git config --global user.name 'cluffa'
           git config --global user.email 'cluffa@users.noreply.github.com'
-          git add -all
-          git commit -am 'updated data'
+          git add --all
+          git commit --am 'updated data'
           git push
