--- a/.github/workflows/scrape.yaml
+++ b/.github/workflows/scrape.yaml
@@ -25,5 +25,5 @@ jobs:
           git config --global user.name 'cluffa'
           git config --global user.email 'cluffa@users.noreply.github.com'
           git add --all
-          git commit --am 'updated data'
+          git commit -m 'updated data'
           git push
