--- a/.github/workflows/scrape.yaml
+++ b/.github/workflows/scrape.yaml
@@ -16,8 +16,9 @@ jobs:
           sudo apt-get install -y --no-install-recommends r-base python3 python3-pip r-cran-tidyverse
           pip3 install -r requirements.txt
       - name: run scripts
-        run: python3 test.py #updateAll.py
-        run: Rscript clean.R
+        run: |
+          python3 test.py #updateAll.py
+          Rscript clean.R
       - name: Create date file
         run: date +%m-%d-%Y > last-run.txt
       - name: Commit all
