--- a/.github/workflows/scrape.yaml
+++ b/.github/workflows/scrape.yaml
@@ -22,8 +22,8 @@ jobs:
         run: date +%m-%d-%Y > last-run.txt
       - name: Commit all
         run: |
-          git config --global user.name 'cluffa'
-          git config --global user.email 'cluffa@users.noreply.github.com'
+          git config --global user.name 'github_actions'
+          git config --global user.email 'username@users.noreply.github.com'
           git add --all
           git commit -m 'updated data'
           git push
